--- a/CleanArchitecture.Persistence/CleanArchitecture.Persistence.csproj
+++ b/CleanArchitecture.Persistence/CleanArchitecture.Persistence.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\CleanArchitecture.Application\CleanArchitecture.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.16" />
+  </ItemGroup>
+
 </Project>
