Mapeamento das Tabelas Users e Profiles. Refatoração do Create User Handler e GetAll

--- a/CleanArchitecture.UnitTest/CleanArchitecture.UnitTest.csproj
+++ b/CleanArchitecture.UnitTest/CleanArchitecture.UnitTest.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArchitecture.Application\CleanArchitecture.Application.csproj" />
+    <ProjectReference Include="..\CleanArchitecture.Persistence\CleanArchitecture.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
