--- a/CleanArchitecture.WebApi/appsettings.json
+++ b/CleanArchitecture.WebApi/appsettings.json
@@ -1,12 +1,20 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLServer": "Server=(LocalDB)\\MSSQLLocalDB;Database=CleanArchitecture;Trusted_Connection=True;MultipleActiveResultSets=true;User Id=sa;Password=sa"
+  },
+  // Provador utilizado: https://ethereal.email/login
+  "Email": {
+    "From": "timmy72@ethereal.email",
+    "Host": "smtp.ethereal.email",
+    "Port": "587",
+    "Username": "timmy72@ethereal.email",
+    "Password": "yp4gV9juRNjpSnp1PY"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SQLServer": "Server=(LocalDB)\\MSSQLLocalDB;Database=CleanArchitecture;Trusted_Connection=True;MultipleActiveResultSets=true;User Id=sa;Password=sa"
   }
 }
