--- a/CleanArchitecture.Application/CleanArchitecture.Application.csproj
+++ b/CleanArchitecture.Application/CleanArchitecture.Application.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Flunt" Version="2.0.5" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.10.0" />
   </ItemGroup>
 
 </Project>
