Teste unitário - Adição dos testes do Token Service

--- a/CleanArchitecture.UnitTest/CleanArchitecture.UnitTest.csproj
+++ b/CleanArchitecture.UnitTest/CleanArchitecture.UnitTest.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\CleanArchitecture.Security\CleanArchitecture.Infraestructure.Security.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="ValueObjects\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
